--- a/index.html
+++ b/index.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Calculator</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 	<h1>Calculator</h1>
 	<div class="calculator">
-		<div class="screen"><p>35.66666</p></div>
+		<div class="screen">
+			<p>35.66666</p>
+		</div>
 		<div class="buttons">
 			<div class="digits">
 				<div class="row">
 					<button class="digit" id="seven">7</button>
 					<button class="digit" id="eight">8</button>
 					<button class="digit" id="nine">9</button>
+					<button class="operator" id="delete">'</button>
+
 				</div>
 				<div class="row">
 					<button class="digit" id="four">4</button>
 					<button class="digit" id="five">5</button>
 					<button class="digit" id="six">6</button>
+					<button class="operator" id="divide">/</button>
 				</div>
 				<div class="row">
 					<button class="digit" id="one">1</button>
 					<button class="digit" id="two">2</button>
 					<button class="digit" id="three">3</button>
+					<button class="operator" id="multiply">*</button>
 				</div>
 				<div class="row">
 					<button class="digit" id="null">0</button>
-					<button class="equal" id="equal">=</button>
+					<button class="operator" id="equal">=</button>
+					<button class="operator" id="plus">+</button>
+					<button class="operator" id="minus">-</button>
 				</div>
-			</div>
-			<div class="operators">
-				<button class="operator" id="divide">/</button>
-				<button class="operator" id="multiply">*</button>
-				<button class="operator" id="minus">-</button>
-				<button class="operator" id="plus">+</button>
 			</div>
 		</div>
 	</div>
 	<script src="index.js"></script>
 </body>
+
 </html>
