created operation functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1>Calculator</h1>
 	<div class="calculator">
 		<div class="screen">
-			<p>35.66666</p>
+			<span>35.666666666666666666</span>
 		</div>
 		<div class="buttons">
 			<div class="digits">
