--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<button class="digit" id="seven">7</button>
 					<button class="digit" id="eight">8</button>
 					<button class="digit" id="nine">9</button>
-					<button class="operator" id="delete">'</button>
+					<button class="operator" id="clear">'</button>
 
 				</div>
 				<div class="row">
