--- a/index.html
+++ b/index.html
@@ -9,37 +9,36 @@
 </head>
 
 <body>
-	<h1>Calculator</h1>
 	<div class="calculator">
 		<div class="screen">
-			<span>35.666666666666666666</span>
+			<span>0</span>
 		</div>
 		<div class="buttons">
 			<div class="digits">
 				<div class="row">
-					<button class="digit" id="seven">7</button>
-					<button class="digit" id="eight">8</button>
-					<button class="digit" id="nine">9</button>
-					<button class="operator" id="clear">'</button>
+					<button class="digit" id="seven" value="7">7</button>
+					<button class="digit" id="eight" value="8">8</button>
+					<button class="digit" id="nine" value="9">9</button>
+					<button id="clear">C</button>
 
 				</div>
 				<div class="row">
-					<button class="digit" id="four">4</button>
-					<button class="digit" id="five">5</button>
-					<button class="digit" id="six">6</button>
-					<button class="operator" id="divide">/</button>
+					<button class="digit" id="four" value="4">4</button>
+					<button class="digit" id="five" value="5">5</button>
+					<button class="digit" id="six" value="6">6</button>
+					<button class="operator" id="divide" value="÷">÷</button>
 				</div>
 				<div class="row">
-					<button class="digit" id="one">1</button>
-					<button class="digit" id="two">2</button>
-					<button class="digit" id="three">3</button>
-					<button class="operator" id="multiply">*</button>
+					<button class="digit" id="one" value="1">1</button>
+					<button class="digit" id="two" value="2">2</button>
+					<button class="digit" id="three" value="3">3</button>
+					<button class="operator" id="multiply" value="*">×</button>
 				</div>
 				<div class="row">
-					<button class="digit" id="null">0</button>
-					<button class="operator" id="equal">=</button>
-					<button class="operator" id="plus">+</button>
-					<button class="operator" id="minus">-</button>
+					<button class="digit" id="null" value="0">0</button>
+					<button  id="equal">=</button>
+					<button class="operator" id="plus" value="+">+</button>
+					<button class="operator" id="minus" valu="-">-</button>
 				</div>
 			</div>
 		</div>
