Made up another approach and thinking about it

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 	<div class="calculator">
 		<div class="screen">
-			<span>0</span>
+			<span id="operand1">124</span>
+			<span id="operator"></span>
+			<span id="operand2"></span>
 		</div>
 		<div class="buttons">
 			<div class="digits">
