--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
 		<div class="buttons">
 			<div class="digits">
 				<div class="row">
-					<button class="digit" id="seven" value="7">7</button>
-					<button class="digit" id="eight" value="8">8</button>
-					<button class="digit" id="nine" value="9">9</button>
+					<button class="digit">7</button>
+					<button class="digit">8</button>
+					<button class="digit">9</button>
 					<button id="clear">C</button>
 
 				</div>
 				<div class="row">
-					<button class="digit" id="four" value="4">4</button>
-					<button class="digit" id="five" value="5">5</button>
-					<button class="digit" id="six" value="6">6</button>
-					<button class="operator" id="divide" value="÷">÷</button>
+					<button class="digit">4</button>
+					<button class="digit">5</button>
+					<button class="digit">6</button>
+					<button class="operator">÷</button>
 				</div>
 				<div class="row">
-					<button class="digit" id="one" value="1">1</button>
-					<button class="digit" id="two" value="2">2</button>
-					<button class="digit" id="three" value="3">3</button>
-					<button class="operator" id="multiply" value="*">×</button>
+					<button class="digit">1</button>
+					<button class="digit">2</button>
+					<button class="digit">3</button>
+					<button class="operator">×</button>
 				</div>
 				<div class="row">
-					<button class="digit" id="null" value="0">0</button>
-					<button  id="equal">=</button>
-					<button class="operator" id="plus" value="+">+</button>
-					<button class="operator" id="minus" valu="-">-</button>
+					<button class="digit">0</button>
+					<button class="operator">=</button>
+					<button class="operator">+</button>
+					<button class="operator">-</button>
 				</div>
 			</div>
 		</div>
