--- a/index.html
+++ b/index.html
@@ -18,29 +18,30 @@
 		<div class="buttons">
 			<div class="digits">
 				<div class="row">
-					<button class="digit">7</button>
-					<button class="digit">8</button>
-					<button class="digit">9</button>
-					<button id="clear">C</button>
-
+					<button class="digit blue">7</button>
+					<button class="digit blue">8</button>
+					<button class="digit blue">9</button>
+					<button id="clear" class="red">C</button>
+					<button id="undo" class="red">⌫</button>
 				</div>
 				<div class="row">
-					<button class="digit">4</button>
-					<button class="digit">5</button>
-					<button class="digit">6</button>
-					<button class="operator">÷</button>
+					<button class="digit blue">4</button>
+					<button class="digit blue">5</button>
+					<button class="digit blue">6</button>
+					<button class="operator red" >÷</button>
+					<button class="operator red">×</button>
 				</div>
 				<div class="row">
-					<button class="digit">1</button>
-					<button class="digit">2</button>
-					<button class="digit">3</button>
-					<button class="operator">×</button>
+					<button class="digit blue">1</button>
+					<button class="digit blue">2</button>
+					<button class="digit blue">3</button>
+					<button class="operator red">+</button>
+					<button class="operator red">-</button>
 				</div>
 				<div class="row">
-					<button class="digit">0</button>
-					<button class="operator">=</button>
-					<button class="operator">+</button>
-					<button class="operator">-</button>
+					<button class="digit blue">0</button>
+					<button id="decimal-point" class="blue">.</button>
+					<button class="operator red" id="equal">=</button>
 				</div>
 			</div>
 		</div>
