restyling buttons so that equal button takes the rest of space, deleting unnesessary selectors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 			<span id="operand2"></span>
 		</div>
 		<div class="buttons">
-			<div class="digits">
 				<div class="row">
 					<button class="digit blue">7</button>
 					<button class="digit blue">8</button>
@@ -41,9 +40,8 @@
 				<div class="row">
 					<button class="digit blue">0</button>
 					<button id="decimal-point" class="blue">.</button>
-					<button class="operator red" id="equal">=</button>
+					<button class="operator red">=</button>
 				</div>
-			</div>
 		</div>
 	</div>
 	<script src="index.js"></script>
